<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="16dp"
    >

    <EditText
        android:id="@+id/website_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_website_editText"
        android:text="@string/text_website_editText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/website_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website_button"
        android:onClick="opeWebsite"/>

    <EditText
        android:id="@+id/location_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_location_editText"
        android:text="@string/text_location_editText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_button"
        android:onClick="openLocation"/>

    <EditText
        android:id="@+id/share_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_share_editText"
        android:text="@string/text_share_editText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_button"
        android:onClick="shareText"/>

</LinearLayout>